--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -4,12 +4,13 @@
 
 <a class="btn btn-primary" style="float: right" href="/add/">Add a Customer</a></p>
 
-<h1>Customers</h1>
+<h1>Customers{% if addlInfo %}{{ addlInfo }}{% endif %}</h1>
 
 <ul style="column-count: 4">
   {% for customer in customers %}
-  <li><a href="/{{ customer.id }}/">{{ customer.firstName }} {{ customer.lastName }}</a></li>
+  <li><a href="/{{ customer.id }}/">{{ customer.fullName }}
+      {% if customer.nbrOfRes %}&nbsp;({{ customer.nbrOfRes }}){% endif %}</a></li>
   {% endfor %}
 </ul>
-
+<h5>{{ msgCount }}</h5>
 {% endblock %}
